# cmake-imported-target-error

./: Makefile  README.md
import_from_subdir/: CMakeLists.txt  Makefile  print_target_properties.cmake
import_from_subdir/lib/: CMakeLists.txt
import_from_subdir/lib/include/: hello.h
import_in_root/: CMakeLists.txt  Makefile  main.cpp
import_in_root/lib/: hello.cpp
